# SmartPay

./: docker-compose.dev.yaml  start-db-container.sh  stop-db-container.sh
server/: pyproject.toml
server/api/: urls.py
server/api/serializers/: user_serializer.py
server/api/views/: user_views.py
server/scripts/: create_admin_user.py
server/smartpay/: manage.py  settings.py  urls.py
server/smartpay/smartpay/: asgi.py  settings.py  urls.py  wsgi.py
ui/: package-lock.json  package.json
ui-two/: package-lock.json  package.json
ui-two/src/: App.js  Pricing.js
ui/src/: App.js
ui/src/components/: Basic.css  Basic.js
