[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Jorge Navarro <jorge.navarro@payscale.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
django-environ = "^0.9.0"
filter = "^0.0.0"
django-filter = "^22.1"
django-extensions = "^3.2.0"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
